--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ function changeCookie() {
     <p><span>Server&nbsp;address:</span> <span>server_address</span></p>
     <p><span>Server&nbsp;name:</span> <span>server_hostname</span></p>
     <p class="smaller"><span>Date:</span> <span>server_date</span></p>
-    <p class="smaller"><span>URI:</span> <span>server_url</span></p>
+    <p class="smaller"><span>URl:</span> <span>server_url</span></p>
     </div>
     <div class="check"><input type="checkbox" id="check" onchange="changeCookie()"> Auto Refresh</div>
         <div id="footer">
