--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>Example</title>
     </head>
     <body>
-        <p>This is an example of a simple HTML page with one paragraph. Nginx server is running</p>
+        <p>This is version-2</p>
     </body>
 </html>
