--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>Example</title>
     </head>
     <body>
-        <p>This is NGINX page</p>
+        <p>Hello from Big-Basket</p>
     </body>
 </html>
