--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>Example</title>
     </head>
     <body>
-        <p> Hello from Boilerplate! Again </p>
+        <p> Hello from Boilerplate!</p>
     </body>
 </html>
